<resources>
    <string name="app_name">MyUsers</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_edit">UserDetail</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone No.</string>
    <string name="prompt_desc">Desc.</string>

    <string name="prompt_password">Password</string>
    <string name="action_useradd">Add</string>
    <string name="action_userupdate">Update</string>
    <string name="action_userdelete">Delete</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_userdetail">User Detail</string>
</resources>
